# jyrki

./: .gitignore  Cargo.toml  readme.md  tools.json
.github/workflows/: nightly.yml  rust_build.yml
codegen/: Cargo.toml
codegen/src/: lib.rs  main.rs
src/: autoupdate.rs  env.rs  generated.rs  history.rs  llm.rs  main.rs  openai.rs  tool.rs  tools.json  types.rs  ui.rs  utility.rs
