[package]
name = "jyrki"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
simple_logger = "5"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
serde = "1"
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
rfd = "0.14"
homedir = "0.3"
wgui = { git = "https://github.com/J45k4/wgui.git", rev = "185c654d6b5b4b223d4efff8f3d04891605bb754" }

[dev-dependencies]

[workspace]
members = ["codegen"]